Update logic for stock quantity when remove , update , add into cart
